# braunmol

./: .gitignore  .pymolrc.py  README.md  environment.yml  setup.cfg
braunmol/: __init__.py
braunmol/_data/: elements.json
braunmol/core/: core.py
braunmol/create/: __init__.py  vsepr.py
braunmol/export/: __init__.py  png.py  tikz.py  view.py
braunmol/show/: __init__.py  cell.py  molecules.py  surfaces.py
graphics/animations/: anim.pml  cyclohexaneflips.xyz
graphics/molecules/organic/: caffeine.pml  caffeine.tex  molecule.tex
graphics/molecules/organic/caffeine/: caffeine.sdf
graphics/molecules/simple/BF3/: BF3.pml  BF3.sdf  BF3.tex
graphics/molecules/simple/BeCl2/: BeCl2.mol  BeCl2.pml  BeCl2.tex
graphics/molecules/simple/C2H2/: C2H2.mol  C2H2.pml  C2H2.tex
graphics/molecules/simple/C2H4/: C2H4.pml  C2H4.tex
graphics/molecules/simple/CCl4/: CCl4.pml  CCl4.tex
graphics/molecules/simple/CH4/: CH4.pml  CH4.tex
graphics/molecules/simple/CO2/: CO2.pml  CO2.tex
graphics/molecules/simple/CO3-2/: CO3-2.pml  CO3-2.tex
graphics/molecules/simple/ClF3/: ClF3.pml  ClF3.tex
graphics/molecules/udgp/: c60.pml  c60.tex  lavor04.pml  lavor04.tex  lavor04.xyz  lavor04_bkup.tex  lavor05.pml  lavor05.tex  lavor05.xyz  lavor06.pml  lavor06.tex  lavor06.xyz  lavor10.pml  lavor10.tex  lavor10.xyz  lj13.pml  lj13.tex  lj13.xyz
graphics/molecules/vsepr/: SF6.pml  SF6.tex  molecule.tex
graphics/solids/advanced_structures/: 9012473.cif  BaH2Cl2O.cif  CuH2SO5.cif  KH8O4F.cif  LiH2BrO.cif  hidratado.pml  perovskite.cif
graphics/solids/ice/: ice.pml
(+123 files in other folders)
