[metadata]
name = braunmol
version = attr: braunmol.VERSION
description = Generate molecule figures.
author = Gabriel Braun
license = MIT
license_files = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    pymatgen

[options.package_data]
* =
    *.json
